Testing changes in 01_05_JupyterNotebook

--- a/exercise_files/02_01_Basic_Data_Types.ipynb
+++ b/exercise_files/02_01_Basic_Data_Types.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e33dd9d1",
    "metadata": {},
    "outputs": [
@@ -36,12 +36,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "7\n"
      ]
     }
    ],
    "source": [
-    "print(x)"
+    "print(x+2)"
    ]
   },
   {
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
