--- a/exercise_files/01_05_JupyterNotebook.ipynb
+++ b/exercise_files/01_05_JupyterNotebook.ipynb
@@ -16,7 +16,9 @@
    "source": [
     "\\begin{equation}\n",
     "e^x=\\sum_{i=0}^\\infty \\frac{1}{i!}x^i\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "Martin Terst\n"
    ]
   },
   {
@@ -66,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -80,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.13.1"
   },
   "vscode": {
    "interpreter": {
